WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
74871
[chromium] compositing/shadows tests fail with accelerated painting
https://bugs.webkit.org/show_bug.cgi?id=74871
Summary
[chromium] compositing/shadows tests fail with accelerated painting
Alok Priyadarshi
Reported
2011-12-19 09:53:37 PST
GrContext::createPlatformSurface does not bind the stencil buffer. The new API GrContext::createPlatformTexture does the right thing.
Attachments
proposed patch
(7.14 KB, patch)
2011-12-19 10:28 PST
,
Alok Priyadarshi
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alok Priyadarshi
Comment 1
2011-12-19 10:28:10 PST
Created
attachment 119882
[details]
proposed patch
Stephen White
Comment 2
2011-12-19 12:12:55 PST
Comment on
attachment 119882
[details]
proposed patch I'm cool with this, but leaving for one of the compositor guys to give a thumbs up on the ManagedTexture stuff.
James Robinson
Comment 3
2011-12-19 18:59:27 PST
Comment on
attachment 119882
[details]
proposed patch R=me
WebKit Review Bot
Comment 4
2011-12-20 00:39:24 PST
Comment on
attachment 119882
[details]
proposed patch Clearing flags on attachment: 119882 Committed
r103309
: <
http://trac.webkit.org/changeset/103309
>
WebKit Review Bot
Comment 5
2011-12-20 00:39:28 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug