[chromium] compositing/shadows tests fail with accelerated painting https://bugs.webkit.org/show_bug.cgi?id=74871

Reviewed by James Robinson.

Switched over to new API for creating accelerated canvas GrContext::createPlatformTexture.
It correctly binds the stencil buffer to the FBO.

Test: compositing/shadows/shadow-drawing.html (existing)

* platform/graphics/chromium/FrameBufferSkPictureCanvasLayerTextureUpdater.cpp:
(WebCore::createAcceleratedCanvas):
(WebCore::FrameBufferSkPictureCanvasLayerTextureUpdater::updateTextureRect):
* platform/graphics/chromium/ManagedTexture.cpp:
(WebCore::ManagedTexture::allocate):
(WebCore::ManagedTexture::bindTexture):
(WebCore::ManagedTexture::framebufferTexture2D):
* platform/graphics/chromium/ManagedTexture.h:


Canonical link: https://commits.webkit.org/91671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@103309 268f45cc-cd09-0410-ab3c-d52691b4dbfc