Source/WebCore/platform/graphics/chromium/ManagedTexture.cpp
@@ -80,19 +80,22 @@ void ManagedTexture::unreserve()
     m_textureManager->unprotectTexture(m_token);
 }
 
-void ManagedTexture::bindTexture(GraphicsContext3D* context, TextureAllocator* allocator)
+void ManagedTexture::allocate(TextureAllocator* allocator)
 {
     ASSERT(m_textureManager->hasTexture(m_token));
     if (!m_textureId)
         m_textureId = m_textureManager->allocateTexture(allocator, m_token);
+}
+
+void ManagedTexture::bindTexture(GraphicsContext3D* context, TextureAllocator* allocator)
+{
+    allocate(allocator);
     context->bindTexture(GraphicsContext3D::TEXTURE_2D, m_textureId);
 }
 
 void ManagedTexture::framebufferTexture2D(GraphicsContext3D* context, TextureAllocator* allocator)
 {
-    ASSERT(m_textureManager->hasTexture(m_token));
-    if (!m_textureId)
-        m_textureId = m_textureManager->allocateTexture(allocator, m_token);
+    allocate(allocator);
     context->framebufferTexture2D(GraphicsContext3D::FRAMEBUFFER, GraphicsContext3D::COLOR_ATTACHMENT0, GraphicsContext3D::TEXTURE_2D, m_textureId, 0);
 }
 
